--- a/CSS/style.css
+++ b/CSS/style.css
@@ -143,7 +143,8 @@ nav div > ul > li:last-child {
     opacity: 0.3;
     height: 100vh;
     width: 100%;
-}footer {
+}
+footer {
     background-color: #b6d5d9;
     padding: 20px 0;
     text-align: center;
